--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,3 @@
-buildscript {
-    repositories {
-        google()
-        mavenCentral()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:7.4.0'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.0"
-    }
-}
-allprojects {
-    repositories {
-        google()
-        mavenCentral()
-    }
-}
-task clean(type: Delete) {
-    delete rootProject.buildDir
-}
+// Root build file
+buildscript { repositories { google(); mavenCentral() }; dependencies { classpath "com.android.tools.build:gradle:7.4.0"; classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.0" } }
+allprojects { repositories { google(); mavenCentral() } }
