--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
-// Root build file
-buildscript { repositories { google(); mavenCentral() }; dependencies { classpath "com.android.tools.build:gradle:7.4.0"; classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.0" } }
-allprojects { repositories { google(); mavenCentral() } }
+plugins {
+    id 'com.android.application' version '8.1.0' apply false
+    id 'com.android.library' version '8.1.0' apply false
+    id 'org.jetbrains.kotlin.android' version '1.8.20' apply false
+}
