--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdk 34
     defaultConfig {
         applicationId "com.example.tvnavbar"
-        minSdk 33 // Android 13
+        minSdk 33
         targetSdk 34
         versionCode 1
         versionName "1.0"
