--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
-    <application android:label="TV Nav" android:theme="@android:style/Theme.NoDisplay">
+    <application android:label="TV NavBar" android:theme="@android:style/Theme.NoDisplay">
         <service android:name=".FloatingNavService" android:exported="false" />
         <service android:name=".ControlOverlayService" android:exported="false" />
         <activity android:name=".MainActivity" android:exported="true" android:excludeFromRecents="true">
